--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     container_name: postgresTTechnique
@@ -5,18 +7,34 @@ services:
     environment:
       POSTGRES_USER: sarah
       POSTGRES_PASSWORD: password
-      PGDATA: /data/postgres
+      POSTGRES_DB: ecommerce  # Nom de la base de données
     volumes:
-      - db:/data/postgres
+      - db:/var/lib/postgresql/data
     ports:
-      - "5332:5432"
+      - "5332:5432"  # Expose PostgreSQL sur le port 5332 en local
     networks:
-      - db
+      - app-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U sarah -d ecommerce"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  app:
+    container_name: spring_app
+    build: .
+    ports:
+      - "8080:8080"  # Expose Spring Boot sur le port 8080
+    depends_on:
+      db:
+        condition: service_healthy  # Attendre que PostgreSQL soit prêt
+    networks:
+      - app-network
     restart: unless-stopped
 
 networks:
-  db:
-    driver: bridge
+  app-network:
 
 volumes:
   db:
